--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "test": "vitest"
+  },
   "devDependencies": {
     "vitest": "^0.34.3"
   }
